# visual-crypter

./: .gitignore  LICENSE  README.md  pyproject.toml
src/visual_crypter/: __init__.py  cli.py  encryption.py  image_utils.py
tests/: test_cli.py
